phase-2/core-block/week-3/day-5/np_frontend.yaml
apiVersion: v1
kind: Pod
metadata:
  name: frontend
  namespace: demo-network
  labels:
    app: frontend
spec:
  containers:
  - name: alpine
    image: alpine
    command: ["sleep", "3600"]
