phase-2/core-block/week-3/day-5/pod_my-app.yaml
apiVersion: v1
kind: Pod

metadata:
  name: my-app
  namespace: demo-rbac

spec:
  serviceAccountName: my-app-sa

  containers:
  - name: app
    image: nginx
