phase-2/core-block/week-3/day-5/np_backend.yaml
apiVersion: v1
kind: Pod
metadata:
  name: backend
  namespace: demo-network
  labels:
    app: backend
spec:
  containers:
  - name: nginx
    image: nginx
    ports:
    - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
  namespace: demo-network
spec:
  selector:
    app: backend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
