phase-2/core-block/week-3/day-5/np_deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: demo-network
spec:
  podSelector: {}
  policyTypes:
  - Ingress
